--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ body {
 
     <button class="button" type="submit">Login</button>
 
-    <a class="sign" href="{{url_for('signup')}}">Create an account</a>
+    <a class="sign" href="signup.html">Create an account</a>
   </div>
 </form>
 
